recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  current(stes)
  if (steps==1)	{
  }
  else	{ 
    avance(length)
    gauche(angle)
    avance(length*shrink)
    recule(length*shrink)
  	droite(2*angle)
    tree(steps-1,length*shrink,angle,shrink);
  }
}